--- a/src/assets/profile.css
+++ b/src/assets/profile.css
@@ -26,6 +26,35 @@ body {
     scrollbar-width: thin;
     display: block;
 }
+.wrapper-warning > img {
+    width: 50vw;
+}
+.wrapper-warning {
+    height: 100vh;
+    display: none;
+    flex-direction: column;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+@media only screen and (orientation:portrait) {
+    .wrapper-warning {
+        display: flex;
+    }
+    .wrapper {
+        display: none;
+    }
+}
+
+@media only screen and (orientation:landscape) {
+    .wrapper-warning {
+        display: none;
+    }
+    .wrapper {
+        display: block;
+    }
+}
 
 a {
     text-decoration: none;
