--- a/src/assets/setting.css
+++ b/src/assets/setting.css
@@ -4,167 +4,350 @@
     /* margin-bottom: 12px; */
     box-sizing: border-box;
 }
-
-.setting_container p, span{
-    color: #fff;
+.wrapper-warning > img {
+    width: 50vw;
 }
-.setting_container .selc_bot {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.wrapper-warning {
+    height: 100vh;
+    display: none;
+    flex-direction: column;
+    color: white;
     align-items: center;
-    width: 100%;
-    gap: 2rem;
-}
-.setting_container .text_bot {
-    color: #fff;
-    font-size: 75%;
+    justify-content: center;
     text-align: center;
-    white-space: nowrap;
-    width: 100px;
 }
-.setting_container .toggle {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background: var(--ds-color-white-10);
-    border: 0;
-    border-radius: 2rem;
-    cursor: pointer;
-    display: inline-block;
-    height: 1.25rem;
-    position: relative;
-    transition: background-color .2s ease;
-    width: 2.5rem;
-}
-.setting_container .toggle:checked {
-    background: rgb(163, 64, 255);
-}
-.setting_container .toggle:before {
-    background: rgb(161, 67, 255, 0.5);
-    content: "";
-    height: 100%;
-    left: 0;
-    opacity: 0.7;
-    border-radius: 9.5px;
-    position: absolute;
-    top: 0;
-    transition: opacity .3s ease;
-    width: 100%;
-}
-.setting_container .toggle:checked:after {
-    opacity: 0.9;
-    transform: translateX(125%);
-}
-.setting_container .toggle:after {
-    background: white;
-    border-radius: 100%;
-    content: "";
-    height: 1rem;
-    left: 0;
-    margin: 0.125rem;
-    opacity: 0.1;
-    position: absolute;
-    top: 0;
-    transition: transform .1s ease, opacity .1s ease;
-    width: 1rem
-}
-.setting_container .ic_bot {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5px;
-}
-.setting_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    
-}
-.setting_container .menu {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.setting_container .selc {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin: 15px 0px;
-}
-.setting_container .ef_volume{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 70%;
-}
-.setting_container .set {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-}
-.setting_container .name {
-    font-size: 75%;
-    width: 100%;
-}
-.setting_container .rangeslider {
-    width: 85%;
-}
-.setting_container >p {
-    font-size: 3em;
-    padding: 0.5em;
-}
-.setting_container >button{
-    background-color: rgb(109, 162, 214, 0.25);
-    width: 25%;
-    font-size: 1em;
-    border-radius: 3em;
-    padding: 12px 6px;
-    border: none;
-    cursor: pointer;
-}
-.setting_container >button >a {
-    text-decoration: none;
-    color: #fff;
-    font-style: italic;
-}
-.setting_container .space {
-    margin: 2rem 0;
-    width: 100%;
-}
-.setting_container >button:hover {
-    background-color: rgb(118, 237, 255, 0.9);
-}
-.setting_container .rangeslider {
-    accent-color: rgb(77, 252, 246);
-}
-.setting_container #back_home {
-    color: aliceblue;
-    margin-top: 4vh;
-}
-@media only screen and (max-width: 450px) {
-    .setting_container .space {
-        margin: 1rem 0;   
+@media only screen and (orientation:portrait) {
+    .wrapper-warning {
+        display: flex;
+    }.setting_container p, span{
+        color: #fff;
     }
-}
-@media only screen and (max-height: 450px) {
-    .setting_container .space {
-        margin: 0;   
+    .setting_container .selc_bot {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 2rem;
     }
-    .setting_container >p {
-        padding: 0;
+    .setting_container .text_bot {
+        color: #fff;
+        font-size: 75%;
+        text-align: center;
+        white-space: nowrap;
+        width: 100px;
+    }
+    .setting_container .toggle {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        background: var(--ds-color-white-10);
+        border: 0;
+        border-radius: 2rem;
+        cursor: pointer;
+        display: inline-block;
+        height: 1.25rem;
+        position: relative;
+        transition: background-color .2s ease;
+        width: 2.5rem;
+    }
+    .setting_container .toggle:checked {
+        background: rgb(163, 64, 255);
+    }
+    .setting_container .toggle:before {
+        background: rgb(161, 67, 255, 0.5);
+        content: "";
+        height: 100%;
+        left: 0;
+        opacity: 0.7;
+        border-radius: 9.5px;
+        position: absolute;
+        top: 0;
+        transition: opacity .3s ease;
+        width: 100%;
+    }
+    .setting_container .toggle:checked:after {
+        opacity: 0.9;
+        transform: translateX(125%);
+    }
+    .setting_container .toggle:after {
+        background: white;
+        border-radius: 100%;
+        content: "";
+        height: 1rem;
+        left: 0;
+        margin: 0.125rem;
+        opacity: 0.1;
+        position: absolute;
+        top: 0;
+        transition: transform .1s ease, opacity .1s ease;
+        width: 1rem
+    }
+    .setting_container .ic_bot {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
     }
     .setting_container {
-        gap: 0.9rem;
-        overflow-y: scroll ;
-        justify-content: flex-start;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        
+    }
+    .setting_container .menu {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .setting_container .selc {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin: 15px 0px;
+    }
+    .setting_container .ef_volume{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 70%;
+    }
+    .setting_container .set {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .setting_container .name {
+        font-size: 75%;
+        width: 100%;
+    }
+    .setting_container .rangeslider {
+        width: 85%;
+    }
+    .setting_container >p {
+        font-size: 3em;
+        padding: 0.5em;
+    }
+    .setting_container >button{
+        background-color: rgb(109, 162, 214, 0.25);
+        width: 25%;
+        font-size: 1em;
+        border-radius: 3em;
+        padding: 12px 6px;
+        border: none;
+        cursor: pointer;
+    }
+    .setting_container >button >a {
+        text-decoration: none;
+        color: #fff;
+        font-style: italic;
+    }
+    .setting_container .space {
+        margin: 2rem 0;
+        width: 100%;
+    }
+    .setting_container >button:hover {
+        background-color: rgb(118, 237, 255, 0.9);
+    }
+    .setting_container .rangeslider {
+        accent-color: rgb(77, 252, 246);
+    }
+    .setting_container #back_home {
+        color: aliceblue;
+        margin-top: 4vh;
+    }
+    @media only screen and (max-width: 450px) {
+        .setting_container .space {
+            margin: 1rem 0;   
+        }
+    }
+    @media only screen and (max-height: 450px) {
+        .setting_container .space {
+            margin: 0;   
+        }
+        .setting_container >p {
+            padding: 0;
+        }
+        .setting_container {
+            gap: 0.9rem;
+            overflow-y: scroll ;
+            justify-content: flex-start;
+        }
+    }
+}
+
+@media only screen and (orientation:landscape) {
+    .wrapper-warning {
+        display: none;
+    }.setting_container p, span{
+        color: #fff;
+    }
+    .setting_container .selc_bot {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 2rem;
+    }
+    .setting_container .text_bot {
+        color: #fff;
+        font-size: 75%;
+        text-align: center;
+        white-space: nowrap;
+        width: 100px;
+    }
+    .setting_container .toggle {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        background: var(--ds-color-white-10);
+        border: 0;
+        border-radius: 2rem;
+        cursor: pointer;
+        display: inline-block;
+        height: 1.25rem;
+        position: relative;
+        transition: background-color .2s ease;
+        width: 2.5rem;
+    }
+    .setting_container .toggle:checked {
+        background: rgb(163, 64, 255);
+    }
+    .setting_container .toggle:before {
+        background: rgb(161, 67, 255, 0.5);
+        content: "";
+        height: 100%;
+        left: 0;
+        opacity: 0.7;
+        border-radius: 9.5px;
+        position: absolute;
+        top: 0;
+        transition: opacity .3s ease;
+        width: 100%;
+    }
+    .setting_container .toggle:checked:after {
+        opacity: 0.9;
+        transform: translateX(125%);
+    }
+    .setting_container .toggle:after {
+        background: white;
+        border-radius: 100%;
+        content: "";
+        height: 1rem;
+        left: 0;
+        margin: 0.125rem;
+        opacity: 0.1;
+        position: absolute;
+        top: 0;
+        transition: transform .1s ease, opacity .1s ease;
+        width: 1rem
+    }
+    .setting_container .ic_bot {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+    }
+    .setting_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        
+    }
+    .setting_container .menu {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .setting_container .selc {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin: 15px 0px;
+    }
+    .setting_container .ef_volume{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 70%;
+    }
+    .setting_container .set {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .setting_container .name {
+        font-size: 75%;
+        width: 100%;
+    }
+    .setting_container .rangeslider {
+        width: 85%;
+    }
+    .setting_container >p {
+        font-size: 3em;
+        padding: 0.5em;
+    }
+    .setting_container >button{
+        background-color: rgb(109, 162, 214, 0.25);
+        width: 25%;
+        font-size: 1em;
+        border-radius: 3em;
+        padding: 12px 6px;
+        border: none;
+        cursor: pointer;
+    }
+    .setting_container >button >a {
+        text-decoration: none;
+        color: #fff;
+        font-style: italic;
+    }
+    .setting_container .space {
+        margin: 2rem 0;
+        width: 100%;
+    }
+    .setting_container >button:hover {
+        background-color: rgb(118, 237, 255, 0.9);
+    }
+    .setting_container .rangeslider {
+        accent-color: rgb(77, 252, 246);
+    }
+    .setting_container #back_home {
+        color: aliceblue;
+        margin-top: 4vh;
+    }
+    @media only screen and (max-width: 450px) {
+        .setting_container .space {
+            margin: 1rem 0;   
+        }
+    }
+    @media only screen and (max-height: 450px) {
+        .setting_container .space {
+            margin: 0;   
+        }
+        .setting_container >p {
+            padding: 0;
+        }
+        .setting_container {
+            gap: 0.9rem;
+            overflow-y: scroll ;
+            justify-content: flex-start;
+        }
     }
 }
