--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -424,10 +424,11 @@
                     <span style="padding-left: 10vh;">+ Để bắt đầu chơi, bạn cần ấn nút "Play" để phát bài nhạc, thời gian sẽ bắt đầu đếm ngược, mỗi bài nhạc sẽ có một lượng thời gian phát nhạc khác nhau. Bạn cần phải trả lời đúng tên bài nhạc đang phát.<br></span>
                     <span style="padding-left: 10vh;">+ Để trả lời thuận tiện và nhanh chóng, bên trái sẽ hiện ra danh sách các bài nhạc gợi ý, bạn chỉ cần click chọn bài hát đó, câu trả lời của bạn sẽ tự động được điền, bạn chỉ cần nhấn "Đoán" để nộp câu trả lời. Trả lời càng nhanh, điểm đạt được sẽ càng cao.<br></span>
                 <br>
-                <span style="padding-left: 5vh;"></span>- Chế độ nhiều người cùng chơi (MultiPlayer):<br></span>
+                <span style="padding-left: 5vh;"></span>- Chế độ xếp hạng:<br></span>
                     <span style="padding-left: 10vh;">+ Bạn có thể gọi mời bạn bè cùng chơi cùng hoặc thách thức cùng người lạ! Bạn cần nhập số vòng chơi (số bài nhạc bạn muốn thách đấu). Bạn có thể tự tạo phòng, tìm kiếm phòng đang có hoặc vào chơi nhanh cùng người lạ.<br></span>
                     <span style="padding-left: 10vh;">+ Ở chế độ chơi này, cách thức chơi giống như ở  “Chế độ thường”. Tuy nhiên, lúc này bạn cần phải tự tay nhập đáp án, trả lời càng nhanh thì điểm đạt được càng cao.<br></span>
                     <span style="padding-left: 10vh;">+ Sau khi kết thúc vòng chơi, ai cao điểm hơn sẽ là người thắng cuộc, số điểm đạt được sẽ tính vào điểm bảng xếp hạng.<br></span>
+                    <span style="padding-left: 10vh;">+ Bạn có thể gửi tin nhắn và icon đến người chơi đối diện.<br></span>
                     <span style="padding-left: 10vh;">+ LƯU Ý: Tên bài hát nhập vào cần phải đúng chính tả, các ký tự nhập là các chữ cái La-tinh, các bài nhạc Nhật Bản, Trung Quốc, Hàn Quốc cần nhập tên theo chữ cái La-tinh (tên đã Việt hóa hoặc tên theo phiên âm La-tinh). Các bài hát tiếng Việt cần nhập đúng chính tả!<br></span>
                 <br>
                 *Cơ chế tính điểm:<br>
@@ -448,7 +449,8 @@
                     <span style="padding-left: 10vh;">+ Level 6: Điểm từ 20.000 đến dưới 50.000.<br></span>
                     <span style="padding-left: 10vh;">+ Level 7: Điểm từ 50.000 trở lên.<br></span>
                 <br>
-                *Thêm bài hát: Nếu bạn có mong muốn góp ý bổ sung bài hát. Bạn có thể vào Hồ sơ -> Thêm bài hát, điền thông tin theo form đã đưa ra để đóng góp thêm bài hát cho web nhé!<br>
+                *Thêm bài hát: Nếu bạn có mong muốn góp ý bổ sung bài hát. Bạn có thể vào Hồ sơ -> Thêm bài hát, điền thông tin theo form đã đưa ra để đóng góp thêm bài hát cho web nhé! 
+                <br>LƯU Ý: người dùng cần nhập đầy đủ thông tin cần thiết như: tên bài hát, tên ca sĩ, đường dẫn của bài hát (nếu có) và thêm 1 đoạn nhạc dài 30 giây đối với bài hát không lời và 15 giây đối với bài hát có lời.<br>
                 <br>
                 *Help: Nếu bạn có thắc mắc, bạn có thể liên hệ qua gmail king.of.melody.nhom.11@gmail.com để được hỗ trợ nhé!
                 <br>
