--- a/src/resources/views/sendverifymail.hbs
+++ b/src/resources/views/sendverifymail.hbs
@@ -89,7 +89,10 @@
                     display: none;
                 }
                 .wrapper {
-                    display: block;
+                    align-items: center;
+                    height: 100vh;
+                    display: flex;
+                    justify-content: center;
                 }
             }
         </style>
