--- a/src/assets/playweb-multi.css
+++ b/src/assets/playweb-multi.css
@@ -925,6 +925,7 @@ body {
     
     .play-area .info .round-info h3{
         font-size: 2vw;
+        padding-top: 2vh;
     }
     
     .container .play-area .info .time-info {
@@ -970,10 +971,12 @@ body {
     
     .container .play-area .info .room-info h3 {
         font-size: 2vw;
+        padding-top: 2vh;
     }
     
     .container .play-area .info .time-info h3 {
         font-size: 2vw;
+        padding-top: 2vh;
     }
     
     .container .play-area .info .player2-info {
@@ -1147,6 +1150,7 @@ body {
     }
     .send-field button{
         border: 0;
+        background: none;
     }
     .send-field i {
         flex: 1;
@@ -1154,7 +1158,6 @@ body {
         color: #666;
         font-size: 18px;
         cursor: pointer;
-        /* rotate: 45deg; */
     }
     
     .send-field i:hover {
@@ -1174,7 +1177,6 @@ body {
     }
     
     .send-field input {
-        /* flex: 5; */
         background: none;
         border: none;
         outline: none;
@@ -1194,7 +1196,6 @@ body {
         top: 6vh;
         width: 16vw;
         height: 19vw;
-        /* background: #0f0; */
         display: flex;
         justify-content: center;
         align-items: center;
