--- a/src/assets/playweb-multi.css
+++ b/src/assets/playweb-multi.css
@@ -265,7 +265,7 @@ body {
         top: 23vh;
         right: 4vw;
         transition: .15s ease;
-        /* transition-delay: 7s; */
+        z-index: 1000;
         display: none;
     }
     .container .play-area .info .player2-info .subnav .background{
@@ -274,7 +274,7 @@ body {
     }
     
     .container .play-area .info .player2-info .chat{
-        width: 100%;
+        width: 18vw;
         line-height: 3vh;
         cursor: pointer;
         background: none;
@@ -284,6 +284,7 @@ body {
         color: white;
         font-size: 0.75rem;
         text-align: center;
+        word-wrap: break-word;
     }
     
     .container .play-area .disc {
@@ -355,7 +356,6 @@ body {
         color: #666;
         font-size: 18px;
         cursor: pointer;
-        /* rotate: 45deg; */
     }
     
     .send-field i:hover {
@@ -1067,7 +1067,7 @@ body {
         top: 23vh;
         right: 4vw;
         transition: .15s ease;
-        /* transition-delay: 7s; */
+        z-index: 1000;
         display: none;
     }
     .container .play-area .info .player2-info .subnav .background{
@@ -1076,7 +1076,7 @@ body {
     }
     
     .container .play-area .info .player2-info .chat{
-        width: 100%;
+        width: 18vw;
         line-height: 3vh;
         cursor: pointer;
         background: none;
@@ -1086,6 +1086,7 @@ body {
         color: white;
         font-size: 0.75rem;
         text-align: center;
+        word-wrap: break-word;
     }
     
     .container .play-area .disc {
@@ -1099,7 +1100,6 @@ body {
         flex-direction: column;
         margin-left: 2vh;
         margin-bottom: 2vh;
-        /* gap: 5vh; */
     }
     
     .chat_
@@ -1123,7 +1123,6 @@ body {
         color: #ff1252;
         cursor: pointer;
         z-index: 100;
-        /* margin: 1em; */
         font-size: 1.5em;
         position: relative;
         
@@ -1628,7 +1627,7 @@ body {
         }
     }
 
-    @media screen and (max-height: 450px) and (min-height: 414px) {
+    @media screen and (max-height: 450px) and (min-height: 401px) {
     
         .song-detail {
             justify-content:flex-start;
