--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -71,7 +71,7 @@
                         </div>
                     </button>
             </div>
-            <div class="para"><b>Một sản phẩm<br> của Nhóm 11</b></div>
+            <div class="para"><b>Một sản phẩm của Nhóm 11</b></div>
         </div>
 
     </div>
