--- a/src/resources/views/playmulti.hbs
+++ b/src/resources/views/playmulti.hbs
@@ -44,7 +44,7 @@
                         </div>
                         <div class="room-info" id="room">
                             Phòng<br>
-                            <h3>{{rom}}</h3>
+                            <h3 id="roomid-info">{{rom}}</h3>
                         </div>
                     </div>
                     <div class="player2-info">
