--- a/src/resources/views/playmulti.hbs
+++ b/src/resources/views/playmulti.hbs
@@ -201,7 +201,7 @@
                 return false;
             }
         </script>
-        <script src="/socket.io/socket.io.js"></script>
+        <script src="https://kingofmelody-8911b7a7e907.herokuapp.com/socket.io/socket.io.js"></script>
         <script src="/playmultiplayer.js"></script>
         
         
