--- a/src/resources/views/playsingle.hbs
+++ b/src/resources/views/playsingle.hbs
@@ -152,7 +152,7 @@
         <input type="hidden" id="mode" data-mode="{{mode}}">
         <input type="hidden" id="efVLInput" value="{{efVL}}">
         <input type="hidden" id="msVLInput" value="{{msVL}}">
-        <script src="/socket.io/socket.io.js"></script>
+        <script src="https://kingofmelody-8911b7a7e907.herokuapp.com/socket.io/socket.io.js"></script>
         <script src="playsingleplayer.js"></script>
     </body>
 </html>
