--- a/src/resources/views/profile.hbs
+++ b/src/resources/views/profile.hbs
@@ -77,7 +77,7 @@
                                 </div>
                                 <div class="mask_item">
                                     <div class="mask_number">{{avg}}</div>
-                                    <div class="mask_des">ĐIỂM TRUNG BÌNH</div>
+                                    <div class="mask_des">TỈ LỆ THẮNG TRUNG BÌNH</div>
                                 </div>
                             </div>
                             <div class="space"></div>
@@ -103,7 +103,7 @@
                                 </div>
                                 <div class="mask_item">
                                     <div class="mask_number">{{hellWinGames}}</div>
-                                    <div class="mask_des">SỐ TRẬN THẮNG MỨC ĐỊA NGỤỤC</div>
+                                    <div class="mask_des">SỐ TRẬN THẮNG MỨC ĐỘ ĐỊA NGỤỤC</div>
                                 </div>
                                 <div class="mask_item">
                                     <div class="mask_number">{{rateHell}}%</div>
@@ -117,7 +117,7 @@
                                 </div>
                                 <div class="mask_item">
                                     <div class="mask_number">{{nohopeWinGames}}</div>
-                                    <div class="mask_des">SỐ TRẬN THẮNG MỨC TUYỆT VỌNG</div>
+                                    <div class="mask_des">SỐ TRẬN THẮNG MỨC ĐỘ TUYỆT VỌNG</div>
                                 </div>
                                 <div class="mask_item">
                                     <div class="mask_number">{{rateNohope}}%</div>
