--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1482,3 +1482,9 @@ table, th, tr{
 .setting_container #back_home {
     color: aliceblue;
 }
+
+@media screen and (max-width: 1300px) and (orientation: landscape)  and (min-width: 1100px){
+    .modal_thuong .select_normal_mode_img {
+        gap: 4vw;
+    }
+}
