--- a/src/resources/views/changepasswordsuccess.hbs
+++ b/src/resources/views/changepasswordsuccess.hbs
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/png" href="/assets/img/favicon.png" sizes="32x32">
         <script src="https://kit.fontawesome.com/d42216d8d0.js" crossorigin="anonymous"></script>
         {{!-- <link rel="stylesheet" href="../assets/sign.css"> --}}
         <title>King of Melody</title>
