--- a/src/resources/views/setting.hbs
+++ b/src/resources/views/setting.hbs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/png" href="/assets/img/favicon.png" sizes="32x32">
         <title>King of Melody</title>
         <link rel="stylesheet" href="../../assets/setting.css">
     </head>
