--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -451,6 +451,9 @@
                 <br>
                 *Thêm bài hát: Nếu bạn có mong muốn góp ý bổ sung bài hát. Bạn có thể vào Hồ sơ -> Thêm bài hát, điền thông tin theo form đã đưa ra để đóng góp thêm bài hát cho web nhé! 
                 <br>LƯU Ý: người dùng cần nhập đầy đủ thông tin cần thiết như: tên bài hát, tên ca sĩ, đường dẫn của bài hát (nếu có) và thêm 1 đoạn nhạc dài 30 giây đối với bài hát không lời và 15 giây đối với bài hát có lời.<br>
+                *Thay đổi tên người dùng: Nếu bạn muốn thay đổi tên người dùng thành tên mới -> Vào hồ sơ -> Nhấp vào phần tên hiển thị bên trên phía bên phải màn hình -> Điền tên người dùng mới và bấm nút "Thay đổi".<br>
+                <br>
+                *Xóa tài khoản người dùng: Nếu bạn muốn xóa tài khoản người dùng -> Vào hồ sơ -> Bấm nút "Xóa tài khoản" và 
                 <br>
                 *Help: Nếu bạn có thắc mắc, bạn có thể liên hệ qua gmail king.of.melody.nhom.11@gmail.com để được hỗ trợ nhé!
                 <br>
