--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1034,7 +1034,7 @@ body{
     left: 0;
     right: 0;
     top: 0;
-    bottom: 0;
+    bottom: 700px;
     display: flex;
     z-index: 15;
     visibility: hidden;
@@ -1055,12 +1055,13 @@ body{
 .ldboardbody{
     position: relative;
     width: 600px;
-    height: 790px;
+    max-height: 98vh;
     background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236));
     margin: auto;
     background-repeat: no-repeat; 
     background-size: cover;
-    overflow-y: scroll;
+    overflow-y: auto;
+    border-radius: 15px;
     z-index: 20;
 }
 
@@ -1085,7 +1086,7 @@ body{
     position: sticky;
     text-align: center;
     justify-content: center;
-    margin: auto;
+    margin: 3vh auto;
     width: 300px;
     border-radius: 5px;
     background-image: linear-gradient(-225deg, #69EACB 0%, #EACCF8 48%, #6654F1 100%);
@@ -1093,7 +1094,7 @@ body{
 
 .leaderboard .rank
 {
-    margin: auto;
+    margin: 5vh auto;
     color: white;
     margin-top: 10px;
     justify-content: center;
@@ -1115,7 +1116,7 @@ table, th, tr{
 
 
 .leaderboard a{
-    background-color: rgba(14,59,132,255);
+    background-color: rgba(61, 7, 185, .6);
     background-image: radial-gradient(150% 160% at 50% 15%, hsla(0, 0%, 100%, 0.4), transparent 30%);
     padding: 1% 5%;
     left: 0;
