--- a/src/assets/profile.css
+++ b/src/assets/profile.css
@@ -383,6 +383,25 @@ a {
     gap: 0.25rem;
 }
 
+.modal_change_username, .modal_deleteuser{
+    background-image: linear-gradient(-225deg, #2CD8D5 0%, #C5C1FF 56%, #FFBAC3 100%);
+    display: none;
+    width: 45vw;
+    height: 45vh;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    z-index: 2000;
+    border-radius: 16px;
+    box-shadow: 0 0.125em 0.5em rgba(0, 0, 0, 0.3);
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.25rem;
+}
+
 #team_modal {
     display: none;
     width: 100%;
@@ -396,7 +415,26 @@ a {
     align-items: center;
 }
 
-.up_song_user {
+#change_username_modal, #deleteuser_modal{
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex{
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+}
+
+.up_song_user, .delete_of_user {
     background-image: linear-gradient(-225deg, #69EACB 0%, #EACCF8 48%, #6654F1 100%);
     width: 30%;
     height: 2.5rem;
@@ -407,12 +445,12 @@ a {
     opacity: 0.8;
 }
 
-.up_song_user:hover {
+.up_song_user:hover, .delete_of_user:hover {
     cursor: pointer;
     opacity: 1;
 }
 
-.album {
+.album, .change_username, .delete_user {
     color: white;
     font-size: 1.5rem
 }
@@ -422,7 +460,7 @@ a {
     font-size: 0.75rem
 }
 
-#songForm {
+#songForm, #usernameForm, #deleteForm {
     display: flex;
     color: white;
     flex-direction: column;
@@ -441,8 +479,13 @@ input[type="file"] {
     border-radius: 4px;
     width: 70%;
 }
+.yes_no{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
 
-input[type="submit"] {
+input[type="submit"]{
     background-image: linear-gradient(-225deg, #DFFFCD 0%, #90F9C4 48%, #39F3BB 100%);
     color: white;
     padding: 10px 20px;
@@ -450,8 +493,25 @@ input[type="submit"] {
     border-radius: 4px;
     cursor: pointer;
     margin-top: 10px;
+    font-weight: bold;
 }
 
+#submit_delete{
+    background: #E94560;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 10px;
+    font-weight: bold;
+    box-shadow: 0 0.125em 0.5em rgba(0, 0, 0, 0.3);
+    background-image: radial-gradient(150% 160% at 50% -10%, #fff 0, transparent 30%);
+}
+
+#submit_delete:hover, #Not:hover{
+    transform: scale(0.95);
+}
 
 @media only screen and (max-width: 950px) {
     .div_gif {
