--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/png" href="/assets/img/favicon.png" sizes="32x32">
         <meta name="google-signin-client_id" content="541338446541-o5o37464275mbciiklur6bqf02mor9ma.apps.googleusercontent.com">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" crossorigin="anonymous" />
         <link rel="stylesheet" href="/assets/sign.css">
