--- a/src/resources/views/playsingle.hbs
+++ b/src/resources/views/playsingle.hbs
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../../assets/playweb.css">
         <link rel="icon" type="image/png" href="/assets/img/favicon.png" sizes="32x32">
         <script src="https://kit.fontawesome.com/d42216d8d0.js" crossorigin="anonymous"></script>
+        <script src="https://kingofmelody-8911b7a7e907.herokuapp.com/socket.io/socket.io.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" 
         integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.core.min.js" 
@@ -153,7 +154,7 @@
         <input type="hidden" id="mode" data-mode="{{mode}}">
         <input type="hidden" id="efVLInput" value="{{efVL}}">
         <input type="hidden" id="msVLInput" value="{{msVL}}">
-        <script src="https://kingofmelody.games/socket.io/socket.io.js"></script>
+        
         <script src="playsingleplayer.js"></script>
     </body>
 </html>
