--- a/src/assets/start.css
+++ b/src/assets/start.css
@@ -2,16 +2,20 @@
     font-family: neosans;
     src: url("/assets/font/UTM_Neo_Sans_IntelBold_Italic.ttf");
 }
+body{
+    position: relative;
+    font-family: neosans;
+    background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236));
+    height: 100vh;
+    background-repeat: no-repeat; 
+    background-size: cover;
 
+}
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: neosans;
-}
-
-.body  {
-    height: 100vh;
 }
 
 .wrapper-warning > img {
