--- a/src/resources/views/setting.hbs
+++ b/src/resources/views/setting.hbs
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/png" href="/assets/img/favicon.png" sizes="32x32">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <title>King of Melody</title>
         <link rel="stylesheet" href="../../assets/setting.css">
     </head>
