update link icon

--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -8,6 +8,7 @@
         <meta name="google-signin-client_id" content="541338446541-o5o37464275mbciiklur6bqf02mor9ma.apps.googleusercontent.com">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" crossorigin="anonymous" />
         <link rel="stylesheet" href="/assets/sign.css">
+        <script src="https://kit.fontawesome.com/d3a938e050.js" crossorigin="anonymous"></script>
         <script src="https://apis.google.com/js/platform.js" async defer></script>
         <title>King of Melody</title>
     </head>
