--- a/src/assets/playweb.css
+++ b/src/assets/playweb.css
@@ -215,7 +215,7 @@
     
     
      .container .disc .btn #progress {
-        /* -webkit-appearance: none; */
+        -webkit-appearance: none;
         width: 20em;
         height: 0.3em;
         background: #f53192;
