--- a/src/assets/playweb.css
+++ b/src/assets/playweb.css
@@ -40,6 +40,9 @@
     .wrapper-warning {
         display: none;
     }
+    #hintname{
+        cursor: pointer;
+    }
     .container {
         position: relative;
         display: flex;
